fixed spacing in header

--- a/sites/all/themes/beta/sass/_colors.scss
+++ b/sites/all/themes/beta/sass/_colors.scss
@@ -101,9 +101,11 @@ $alert_color_darker: darken( $alert_color, 20% );
 
 
 @mixin headline2 {
-	padding: .2em .5em 0.2em 0em;
+	//padding: .2em .5em 0.2em 0em;
+	padding: 0 0 5px 0;
 	color: $blue_black;
-	margin: .5em .5em .5em 0 !important;
+	//margin: .5em .5em .5em 0 !important;
+	margin: 0 0 10px 0;
 	border-bottom: 1px solid $blue_medium;
 }
 
