--- a/sites/all/themes/beta/sass/mailchimp.scss
+++ b/sites/all/themes/beta/sass/mailchimp.scss
@@ -6,7 +6,7 @@
 }
 
 #mc_embed_signup {
-	margin-top: 10px;
+//	margin-top: 10px;
 	#signup_box {
 		padding-bottom: 4px;
 	}
